[workspace]
members = [
    "exploit_test",
]
resolver = "2"

[workspace.package]
name = "drift-v2-forensics"
authors = ["Driftt Victims Committee"]
homepage = "https://drifttvictimscommittee.github.io"
keywords = ["solana"]

version = "0.1.0"
edition = "2021"


[workspace.dependencies]
borsh = { version = "1.6", features = ["derive"] }
mollusk-svm = "0.8"
serde_json = "1"
solana-account = "3"
solana-client = "3"
solana-message = "3"
solana-account-decoder-client-types = "3"
solana-keypair = "3"
solana-pubkey = "3"
solana-rpc-client-types = "3"
solana-system-interface = "3"
tokio = { version = "1", features = ["rt", "macros"] }